<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="@drawable/dog">

   <!-- <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/dog"/>-->
    <ImageButton
        android:layout_width="70dip"
        android:layout_height="70dip"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/btn_bg_circle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/user_name"
            android:layout_marginStart="10dp" />

        <Button
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/rank"
            android:background="@drawable/btn_bg_normal"
            android:layout_marginStart="10dp" />

        <Button
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginLeft="60dp"
            android:text="@string/sign_in"
            android:background="@drawable/btn_bg_normal"
            android:layout_marginStart="60dp" />
    </LinearLayout>


</LinearLayout>
