<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/main">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:background="#00FFFFFF">
            <LinearLayout
                android:id="@+id/settingLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bottom_icn_setting"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="15sp"
                    android:text="@string/setting"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/loginOutLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bottom_icn_loginout"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="15sp"
                    android:text="@string/chang_account"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/quitLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bottom_icn_quit"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/quit"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.design.widget.NavigationView>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       <RelativeLayout

           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="#ff0000">

           <Button
               android:id="@+id/genduo_main_bt"
               android:layout_marginLeft="10dp"
               android:background="@drawable/caidan1"
               android:layout_marginTop="10dp"
               android:layout_width="25dp"
               android:layout_height="25dp" />


           <android.support.design.widget.TabLayout
               android:background="#ff0000"
               android:id="@+id/tabLayout"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_marginLeft="50dp"
               android:layout_marginRight="50dp"
               />


           <Button
               android:layout_marginRight="10dp"
               android:layout_alignParentRight="true"
               android:id="@+id/sousuo_main_id"
               android:layout_marginTop="10dp"
               android:layout_marginLeft="30dp"
               android:background="@drawable/sousuo1"
               android:layout_width="25dp"
               android:layout_height="25dp" />

       </RelativeLayout>


       <android.support.v4.view.ViewPager
           android:id="@+id/viewPager"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"/>

   </LinearLayout>



</android.support.v4.widget.DrawerLayout>